--- a/index.html
+++ b/index.html
@@ -1,57 +1,92 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>HTML5 Photo Gallery</title>    
-		<!-- Main CSS File -->
-		<link rel="stylesheet" href="css/styles.css" type="text/css" />
-    </head>
-    <body>
-		<header>
-			<div class="container">
-				<nav id="navbar">
-					<a href="#">All Items</a>
-					<a href="#">Print Design</a>
-					<a href="#">Logo Design</a>
-					<a href="#">Web Design</a>
-				</nav>
-			</div><!-- container -->
-		</header>
-		
-		<section id="main">
-			<div class="container">
-				<ul id="gallery">
-					<li data-tags="Logo Design, Print Design"><img src="img/1.jpg"></li>
-					<li data-tags="Web Design, Logo Design"><img src="img/2.jpg"></li>
-					<li data-tags="Print Design"><img src="img/3.jpg"></li>
-					<li data-tags="Logo Design, Print Design, Web Design"><img src="img/4.jpg"></li>
-					<li data-tags="Logo Design"><img src="img/5.jpg"></li>
-					<li data-tags="Logo Design, Print Design, Web Design"><img src="img/6.jpg"></li>
-					<li data-tags="Logo Design, Web Design"><img src="img/7.jpg"></li>
-					<li data-tags="Print Design"><img src="img/8.jpg"></li>
-					<li data-tags="Web Design, Print Design, Logo Design"><img src="img/9.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/10.jpg"></li>
-					<li data-tags="Print Design"><img src="img/11.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/12.jpg"></li>
-					<li data-tags="Web Design, Print Design, Logo Design"><img src="img/13.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/14.jpg"></li>
-					<li data-tags="Print Design"><img src="img/15.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/16.jpg"></li>
-					<li data-tags="Web Design, Print Design"><img src="img/17.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/18.jpg"></li>
-					<li data-tags="Web Design"><img src="img/19.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/20.jpg"></li>
-					<li data-tags="Logo Design, Print Design"><img src="img/21.jpg"></li>
-					<li data-tags="Logo Design"><img src="img/22.jpg"></li>
-					<li data-tags="Print Design"><img src="img/23.jpg"></li>				
-				</ul>
-			</div><!-- container -->
-			<hr>
-			<footer>
-				<div class="container">
-					<p>HTML5 Photo Gallery &copy; 2014</p>
-				</div><!-- container -->
-			</footer>
-		</section>
+<html lang="en" dir="ltr">
 
-    </body>
-</html>s
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="description" content="Elizabeth Hildreth Animated Image Gallery">
+	<meta name="keywords" content="Elizabeth,Hildreth,animated,image,gallery,javascript">
+	<meta name="author" content="Elizabeth Hildreth">
+	<title>HTML5 Animated Image Gallery</title>
+
+	<!-- fancybox css -->
+		<link rel="stylesheet" href="css/fancybox/jquery.fancybox-buttons.css">
+		<link rel="stylesheet" href="css/fancybox/jquery.fancybox-thumbs.css">
+		<link rel="stylesheet" href="css/fancybox/jquery.fancybox.css">
+	<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"> -->
+		<!-- custom css -->
+		<link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+	<header>
+		<div class="container">
+			<nav id="navbar"></nav>
+		</div><!--end container-->
+	</header>
+	<section id="main">
+		<div class="container">
+			<ul id="gallery">
+				<li data-tags="Logo Design, Print Design,Web Design"><a class="fancybox" rel="group" data-fancybox="gallery" href="img/1.jpg"><img src="img/1.jpg" alt=""></a></li>
+				<li data-tags="Logo Design"><a class="fancybox" rel="group" data-fancybox="gallery" href="img/2.jpg"><img src="img/2.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/3.jpg"><img src="img/3.jpg" alt=""></a></li>
+				<li data-tags="Web Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/4.jpg"><img src="img/4.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/5.jpg"><img src="img/5.jpg" alt=""></a></li>
+				<li data-tags="Web Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/6.jpg"><img src="img/6.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/7.jpg"><img src="img/7.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/8.jpg"><img src="img/8.jpg" alt=""></a></li>
+				<li data-tags="Web Design, Logo Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/9.jpg"><img src="img/9.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/10.jpg"><img src="img/10.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/11.jpg"><img src="img/11.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/12.jpg"><img src="img/12.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design,Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/13.jpg"><img src="img/13.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/14.jpg"><img src="img/14.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/15.jpg"><img src="img/15.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/16.jpg"><img src="img/16.jpg" alt=""></li>
+				<li data-tags="Logo Design, Print Design, Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/17.jpg"><img src="img/17.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/18.jpg"><img src="img/18.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design,Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/19.jpg"><img src="img/19.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/20.jpg"><img src="img/20.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design,Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/1.jpg"><img src="img/21.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/22.jpg"><img src="img/22.jpg" alt=""></a></li>
+				<li data-tags="Logo Design, Print Design,Web Design"><a class="fancybox" rel="group" data-fancybox="gallery"  href="img/23.jpg"><img src="img/23.jpg" alt=""></a></li>
+			</ul><!--end gallery-->
+		</div><!--end container-->
+		<hr>
+		<footer>
+				<div class="container">
+					<p>HTML5 Animated Photo Gallery, &copy; 2019</p>
+				</div>
+		</footer>
+	</section><!--end section #main-->
+
+
+	<!-- include JQuery -->
+	<script src="js/jquery.js"></script>
+
+	<!-- include Quicksand Plugin -->
+	<script src="js/jquery.quicksand.js"></script>
+
+	<!-- include fancybox -->
+		<!-- <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script> -->
+	<!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script> -->
+	<script src="js/fancybox/jquery.fancybox-buttons.js"></script>
+	<script src="js/fancybox/jquery.fancybox-media.js"></script>
+	<script src="js/fancybox/jquery.fancybox-thumbs.js"></script>
+	<script src="js/fancybox/jquery.fancybox.js"></script>
+	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
+
+
+	<!-- include custom js -->
+	<script src="js/script.js"></script>
+
+	<!-- call fancybox -->
+	<script>
+		$(document).ready(function(){
+			$(".fancybox").fancybox();
+		});
+	</script>
+</body>
+
+</html>
